🧹 Remove scrollbar, add screenzen as a tool and fix education bottom line

--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,11 @@
 @layer base {
     * {
         @apply border-border;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* Internet Explorer 10+ */
+    }
+    *::-webkit-scrollbar {
+        display: none; /* Safari and Chrome */
     }
     body {
         @apply bg-background text-foreground;
